[Feature] 서킷 브레이커 적용 및 llm 기능.